Final adjustments to REST interface
