# swagger_server/swagger/swagger.yaml
@@ -23,7 +23,6 @@ paths:
       description: ""
       operationId: "get_configurations"
       produces:
-      - "application/xml"
       - "application/json"
       parameters: []
       responses:
@@ -42,9 +41,7 @@ paths:
       operationId: "add_new_configuration"
       consumes:
       - "application/json"
-      - "application/xml"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
       - in: "body"
@@ -57,9 +54,9 @@ paths:
         "200":
           description: "Success"
         "400":
-          description: "Please insert correct parameters"
-        "404":
-          description: "Not enough resources"
+          description: "Not correct parameters"
+        "406":
+          description: "Not correct json format"
       x-swagger-router-controller: "swagger_server.controllers.v_ms_controller"
     delete:
       tags:
@@ -68,7 +65,6 @@ paths:
       description: ""
       operationId: "delete_configurations"
       produces:
-      - "application/xml"
       - "application/json"
       responses:
         "200":
@@ -82,7 +78,6 @@ paths:
       description: "Returns a single configuration object"
       operationId: "get_configuration_by_id"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
       - name: "configurationID"
@@ -96,8 +91,6 @@ paths:
           description: "Success"
           schema:
             $ref: "#/definitions/Configuration"
-        "400":
-          description: "Invalid ID supplied"
         "404":
           description: "Configuration not found"
       x-swagger-router-controller: "swagger_server.controllers.v_ms_controller"
@@ -108,10 +101,8 @@ paths:
       description: ""
       operationId: "update_configuration_by_id"
       consumes:
-      - "application/xml"
       - "application/json"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
       - name: "configurationID"
@@ -129,8 +120,10 @@ paths:
       responses:
         "200":
           description: "Success"
-        "405":
-          description: "Invalid input"
+        "400":
+          description: "Not correct parameters"
+        "406":
+          description: "Not correct json format"
       x-swagger-router-controller: "swagger_server.controllers.v_ms_controller"
     delete:
       tags:
@@ -139,7 +132,6 @@ paths:
       description: ""
       operationId: "delete_configuration_by_id"
       produces:
-      - "application/xml"
       - "application/json"
       parameters:
       - name: "configurationID"
@@ -149,10 +141,8 @@ paths:
         type: "integer"
         format: "int64"
       responses:
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Configuration not found"
+        "200":
+          description: "Success"
       x-swagger-router-controller: "swagger_server.controllers.v_ms_controller"
 definitions:
   Configuration:
